# didc-pdf-parser

./: .env.dist  .gitignore  Dockerfile  Dockerfile-gpu  README.md  output.json  pyproject.toml  requirements.txt
didc-pdf-parser/: llm.py  main.py  models.py  parser.py
ollama/: Modelfile
src/: data.html  doclingStrategy.py  ocr.py  parser.py  schema.json
