[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "didc-pdf-parser"
version = "0.1.0"
description = "Parse PDF documents and extract structured data"
dependencies = [
    "typer",
    "rich",
    "pydantic-ai",
    "docling",   
]

[project.scripts]
didc-pdf-parser = "src.main:app"